[package]
name = "telegram-claude-yolo-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Telegram bot that bridges Claude CLI interactions"
license = "MIT"
repository = "https://github.com/your-username/telegram-claude-yolo-bot"
readme = "README.md"

[[bin]]
name = "telegram-claude-yolo-bot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
daemonize = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"