[package]
name = "telegram-claude-yolo-bot"
version = "0.1.0"
edition = "2021"
authors = ["aviggiano"]
description = "A Telegram bot that bridges Claude CLI interactions"
license = "MIT"
repository = "https://github.com/aviggiano/telegram-claude-yolo-bot"
homepage = "https://github.com/aviggiano/telegram-claude-yolo-bot"
keywords = ["telegram", "bot", "claude", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "telegram-claude-yolo-bot"
path = "src/main.rs"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "webhooks"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"